--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>HY-CoRA | 홈</title>
+  <title>HY‑CoRA | 홈</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <script defer src="assets/js/main.js"></script>
 </head>
 <body>
-
-  <!-- Header & Nav -->
   <header>
     <div class="container">
       <nav>
         <div class="logo">
-          <a href="index.html"><img src="assets/images/logo.png" alt="HY-CoRA 로고"></a>
+          <a href="index.html"><img src="assets/images/logo.png" alt="HY‑CoRA"></a>
         </div>
+        <button class="nav-toggle">☰</button>
         <ul>
           <li><a href="about.html">소개</a></li>
           <li><a href="activities.html">활동</a></li>
@@ -27,26 +27,23 @@
     </div>
   </header>
 
-  <!-- Hero 섹션 -->
   <section class="section">
     <div class="container" style="text-align:center;">
-      <h1>환영합니다, HY-CoRA에 오신 걸 환영합니다!</h1>
+      <h1>환영합니다, HY‑CoRA!</h1>
       <p>한양대학교 ERICA 컴퓨팅 연구 동아리</p>
       <img src="assets/images/banner.jpg" alt="동아리 배너" style="width:100%;max-height:400px;object-fit:cover;margin-top:1rem;">
     </div>
   </section>
 
-  <!-- 주요 활동 미리보기 -->
   <section class="section">
     <div class="container">
       <h2>다가오는 이벤트</h2>
       <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:1.5rem;margin-top:2rem;">
-        <!-- 이벤트 카드 반복 -->
-        <div style="background:#fff;padding:1rem;border-radius:8px;box-shadow:0 1px 3px rgba(0,0,0,0.1);">
+        <div class="card">
           <h3>코딩 스터디 2025 봄</h3>
           <p>매주 수요일 18:00, 1공학관 304호</p>
         </div>
-        <div style="background:#fff;padding:1rem;border-radius:8px;box-shadow:0 1px 3px rgba(0,0,0,0.1);">
+        <div class="card">
           <h3>오픈소스 토크 콘서트</h3>
           <p>6월 30일 15:00, 창의관 세미나실</p>
         </div>
@@ -54,12 +51,10 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <div class="container">
-      &copy; 2025 HY-CoRA. All Rights Reserved.
+      &copy; 2025 HY‑CoRA. All Rights Reserved.
     </div>
   </footer>
-
 </body>
 </html>
