--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <section id="sliderType01">
       <div class="slider__wrap relative">
         <div class="slider__img relative overflow-hidden rounded-xl shadow-lg">
-          <div class="slider__inner flex transition-all duration-500" style="transform: translateX(-689px);">
+          <div class="slider__inner flex transition-all duration-500" style="transform: translateX(-1378px);">
             <div class="slider" role="group" aria-label="1/4"><img src="/img/배너1.PNG" alt="이미지1" class="w-full h-auto"></div>
 
             <div class="slider" role="group" aria-label="2/4">
@@ -233,7 +233,7 @@
           </div>
 
           <!-- 닷 버튼 -->
-          <div class="slider__dot absolute bottom-4 left-1/2 -translate-x-1/2 flex space-x-2 z-10"><span class="dot" title="이미지 1"></span><span class="dot active" title="이미지 2"></span><span class="dot" title="이미지 3"></span><span class="dot" title="이미지 4"></span></div>
+          <div class="slider__dot absolute bottom-4 left-1/2 -translate-x-1/2 flex space-x-2 z-10"><span class="dot" title="이미지 1"></span><span class="dot" title="이미지 2"></span><span class="dot active" title="이미지 3"></span><span class="dot" title="이미지 4"></span></div>
         </div>
       </div>
     </section>
@@ -522,4 +522,11 @@ function getForecast(x, y) {
     });
 }
 </script>
+
+
+
+
+
+
+
 </body></html>
