--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="ko"><head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>오늘 뭐하지?</title>
+  <title>HY-CoRA</title>
   <link rel="stylesheet" href="/css/common.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -163,10 +163,10 @@
     </div>
 
     <nav class="menu1">
-        <a href="/todo">오늘 뭐하지?</a>
-        <a href="/lego">놀러가자!</a>
-        <a href="/listView">자유게시판</a>
-        <a href="/ask">1:1 문의하기</a>
+        <a href="/todo">about us</a>
+        <a href="/lego">community</a>
+        <a href="/listView">announcement</a>
+        <a href="/ask">가입안내</a>
     </nav>
     <div class="search-login-wrap">
         <form action="/listTour" method="get" style="display: flex; gap: 10px; align-items: center; text-align: center;">
