--- a/index.html
+++ b/index.html
@@ -244,12 +244,12 @@
     <ul class="text-sm space-y-1">
       <li>
         <a class="hover:underline" href="/view?num=68">
-          • [공지사항]'What2Do' 베타테스트 오픈 안내!
+          • [공지사항] HY-CoRA 소개 사이트 베타
         </a>
       </li>
       <li>
         <a class="hover:underline" href="/view?num=67">
-          • [공지사항]커뮤니티 이용 수칙 안내
+          • [공지사항] 안내사항
         </a>
       </li>
       <li>
@@ -261,7 +261,7 @@
     </ul>
     <!-- 날씨조회 -->
     <div class="rounded-lg shadow" id="weather-widget" style="margin-top:50px;">
-      <h2 class="text-lg font-semibold mb-3"> 단기예보 조회</h2>
+      <h2 class="text-lg font-semibold mb-3"> 스터디 조회</h2>
       <input class="searchText" type="text" placeholder="장소입력" style="padding:5px; width:300px; border: solid 1px; border-radius: 3px;">
       <button class="btnSearch">검색</button>
       <div class="ct_weather" style="margin-top:15px; background: #E9ECEF; border-radius: 4px; width:370px;"></div>
@@ -274,36 +274,36 @@
 
 <!-- 인기 관광지 BEST 5 좋아요 기준 -->
 <section class="p-4">
-  <h2 class="text-xl font-bold mb-4"> 인기 관광지 BEST 5</h2>
+  <h2 class="text-xl font-bold mb-4"> 주요 활동</h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
     <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='detail?id=1864&amp;city='">
       <img alt="" class="w-full h-48 object-cover" src="http://tong.visitkorea.or.kr/cms/resource/27/3412427_image3_1.jpg">
       <div class="p-3 text-center">
-        <p class="text-base font-semibold text-gray-800 truncate">경주 골굴암 마애여래좌상</p>
+        <p class="text-base font-semibold text-gray-800 truncate">CS 관련 스터디</p>
       </div>
     </div>
     <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='detail?id=3227&amp;city='">
       <img alt="" class="w-full h-48 object-cover" src="http://tong.visitkorea.or.kr/cms/resource/11/3467411_image3_1.JPG">
       <div class="p-3 text-center">
-        <p class="text-base font-semibold text-gray-800 truncate">광교 프라이부르크전망대</p>
+        <p class="text-base font-semibold text-gray-800 truncate">MT</p>
       </div>
     </div>
     <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='detail?id=17&amp;city='">
       <img alt="" class="w-full h-48 object-cover" src="http://tong.visitkorea.or.kr/cms/resource/54/2994054_image3_1.jpg">
       <div class="p-3 text-center">
-        <p class="text-base font-semibold text-gray-800 truncate">가곡유황온천&amp;스파</p>
+        <p class="text-base font-semibold text-gray-800 truncate">코라인의 밤</p>
       </div>
     </div>
     <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='detail?id=9248&amp;city='">
       <img alt="" class="w-full h-48 object-cover" src="http://tong.visitkorea.or.kr/cms/resource/43/2735043_image2_1.jpg">
       <div class="p-3 text-center">
-        <p class="text-base font-semibold text-gray-800 truncate">더몰트하우스</p>
+        <p class="text-base font-semibold text-gray-800 truncate">ASV 과학축제 부스 출범</p>
       </div>
     </div>
     <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='detail?id=313&amp;city='">
       <img alt="" class="w-full h-48 object-cover" src="http://tong.visitkorea.or.kr/cms/resource/21/2654721_image2_1.jpg">
       <div class="p-3 text-center">
-        <p class="text-base font-semibold text-gray-800 truncate">가쯔야</p>
+        <p class="text-base font-semibold text-gray-800 truncate">코라코라 열공단</p>
       </div>
     </div>
   </div>
@@ -314,20 +314,20 @@
 <!-- 하단 -->
 <div class="footer">
     <div>
-        <strong>오늘 뭐하지?</strong> | 오늘의 활동을 추천해주는 플랫폼
+        <strong>HY-CoRA</strong> | Hanyang University Computer & Research Association
     </div>
     <div style="margin: 10px 0;">
         <a href="/">홈</a>
-        <a href="/todo">오늘 뭐하지?</a>
-        <a href="/lego">놀러가자!</a>
-        <a href="/listView">자유게시판</a>
-        <a href="/ask">1:1 문의</a>
+        <a href="/todo">about us</a>
+        <a href="/lego">community</a>
+        <a href="/listView">announcement</a>
+        <a href="/ask">가입문의</a>
     </div>
     <div>
-        ImPlanTeam(지영, 재훈, 도윤)
+        Developed by 2025 representatives
     </div>
     <div style="margin-top: 10px; ">
-        © 2025 오늘 뭐하지? 팀 프로젝트 | All rights reserved.
+        © 2025 HY-CoRA | All rights reserved.
     </div>
     <div style="margin-top: 30px; width:100%; display: flex; align-items: center; gap: 15px; justify-content: center;">
         <span>출처 | </span>
