--- a/index.html
+++ b/index.html
@@ -327,17 +327,14 @@
         Developed by 2025 representatives
     </div>
     <div style="margin-top: 10px; ">
-        © 2025 HY-CoRA | All rights reserved.
+        © 경기도 안산시 한양대학로 55, 학생복지관 425호
     </div>
     <div style="margin-top: 30px; width:100%; display: flex; align-items: center; gap: 15px; justify-content: center;">
-        <span>출처 | </span>
-        <img src="https://korean.visitkorea.or.kr/resources/images/common/logo_foot_api.png?v=20230601001" alt="투어api">
-        <img src="https://www.data.go.kr/images/biz/use-info/img_opencode1_m.jpg" alt="기상청api">
-        <img src="https://cdn.visitkorea.or.kr/resources/images/common/logo_foot_gg.png" alt="한국관광공사">
-<!--        <img src="" alt="공공데이터포털">-->
+        <span>회장 | 이한     부회장 | 최관우</span>
+        
     </div>
     <footer style="font-size: 10px; text-align: center; color: gray;">
-        지도/주소 서비스 제공: Kakao Developers
+        hycora369@gmail.com
     </footer>
     <style>
         .footer {
