--- a/index.html
+++ b/index.html
@@ -330,9 +330,20 @@
         © 경기도 안산시 한양대학로 55, 학생복지관 425호
     </div>
     <div style="margin-top: 30px; width:100%; display: flex; align-items: center; gap: 15px; justify-content: center;">
-        <span>회장 | 이한     부회장 | 최관우</span>
-        
     </div>
+    <div>
+        <strong>회장</string>
+    </div>
+    <div>
+        이한 010-3552-2044
+    </div>
+    <div>
+        <strong>부회장</string>
+    </div>
+    <div>
+        <strong>최관우 010-0000-0000</string>
+    </div>
+
     <footer style="font-size: 10px; text-align: center; color: gray;">
         hycora369@gmail.com
     </footer>
