--- a/index.html
+++ b/index.html
@@ -159,38 +159,17 @@
 <!-- 상단 네비게이션 -->
 <div class="navbar">
     <div class="logo">
-        <a href="/what2do">
+        <a href="https://leehan20.github.io/HY-CoRA_website/">
             <img src="/img/로고1.png" alt="로고">
         </a>
     </div>
 
     <nav class="menu1">
-        <a href="/todo">about us</a>
-        <a href="/lego">community</a>
-        <a href="/listView">announcement</a>
-        <a href="/ask">가입안내</a>
+        <a href="/about us">about us</a>
+        <a href="/community">community</a>
+        <a href="/announcement">announcement</a>
+        <a href="/join">가입안내</a>
     </nav>
-    <div class="search-login-wrap">
-        <form action="/listTour" method="get" style="display: flex; gap: 10px; align-items: center; text-align: center;">
-            <div id="container2" style="height: 40px; position: relative; display: flex;">
-                <input type="text" name="title" id="kkk" placeholder="검색어(제목)를 입력하세요." style="border: 1px solid; border-radius: 15px; width: 280px;">
-                <button type="submit" id="zzz" style="position: absolute; right: 5px; background-color: transparent; border-radius: 20px; width: 40px; height: 40px;">
-                    <img src="/img/돋보기.webp" alt="검색" style="width: 25px; margin: auto;">
-                </button>
-            </div>
-        </form>
-
-        <div class="auth-section">
-            <div class="my">
-      
-            </div>
-            <span>
-      <a href="/login2" id="a3">
-        <button class="login-btn">로그인</button>
-      </a>
-    </span>
-        </div>
-    </div>
 </div>
 
 <div id="all">
@@ -206,19 +185,19 @@
             <div class="slider" role="group" aria-label="1/4"><img src="/img/배너1.PNG" alt="이미지1" class="w-full h-auto"></div>
 
             <div class="slider" role="group" aria-label="2/4">
-              <a href="/lego" class="block w-full h-full relative z-10">
+              <a href="/about us" class="block w-full h-full relative z-10">
                 <img src="/img/배너2.PNG" alt="배너 이미지" class="w-full h-full object-cover rounded-xl">
               </a>
             </div>
 
             <div class="slider" role="group" aria-label="3/4">
-              <a href="/lego" class="block w-full h-full relative z-10">
+              <a href="/join" class="block w-full h-full relative z-10">
               <img src="/img/배너3.PNG" alt="이미지3" class="w-full h-auto">
               </a>
             </div>
 
             <div class="slider" role="group" aria-label="4/4">
-              <a href="/todo" class="block w-full h-full relative z-10">
+              <a href="/announcement" class="block w-full h-full relative z-10">
               <img src="/img/배너4.PNG" alt="이미지4" class="w-full h-auto">
               </a>
             </div>
@@ -261,10 +240,10 @@
       </li>
       
     </ul>
-    <!-- 날씨조회 -->
+    <!-- 스터디 -->
     <div class="rounded-lg shadow" id="weather-widget" style="margin-top:50px;">
       <h2 class="text-lg font-semibold mb-3"> 스터디 조회</h2>
-      <input class="searchText" type="text" placeholder="장소입력" style="padding:5px; width:300px; border: solid 1px; border-radius: 3px;">
+      <input class="searchText" type="text" placeholder="스터디명 입력" style="padding:5px; width:300px; border: solid 1px; border-radius: 3px;">
       <button class="btnSearch">검색</button>
       <div class="ct_weather" style="margin-top:15px; background: #E9ECEF; border-radius: 4px; width:370px;"></div>
     </div>
@@ -274,35 +253,35 @@
 </section>
 </div>
 
-<!-- 인기 관광지 BEST 5 좋아요 기준 -->
+<!-- 주요 활동들 -->
 <section class="p-4">
   <h2 class="text-xl font-bold mb-4"> 주요 활동</h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
-    <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='detail?id=1864&amp;city='">
+    <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='/CS_related_study'">
       <img alt="" class="w-full h-48 object-cover" src="http://tong.visitkorea.or.kr/cms/resource/27/3412427_image3_1.jpg">
       <div class="p-3 text-center">
         <p class="text-base font-semibold text-gray-800 truncate">CS 관련 스터디</p>
       </div>
     </div>
-    <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='detail?id=3227&amp;city='">
+    <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='/MT'">
       <img alt="" class="w-full h-48 object-cover" src="http://tong.visitkorea.or.kr/cms/resource/11/3467411_image3_1.JPG">
       <div class="p-3 text-center">
         <p class="text-base font-semibold text-gray-800 truncate">MT</p>
       </div>
     </div>
-    <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='detail?id=17&amp;city='">
+    <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='/night_of_cora'">
       <img alt="" class="w-full h-48 object-cover" src="http://tong.visitkorea.or.kr/cms/resource/54/2994054_image3_1.jpg">
       <div class="p-3 text-center">
         <p class="text-base font-semibold text-gray-800 truncate">코라인의 밤</p>
       </div>
     </div>
-    <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='detail?id=9248&amp;city='">
+    <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='/ASV'">
       <img alt="" class="w-full h-48 object-cover" src="http://tong.visitkorea.or.kr/cms/resource/43/2735043_image2_1.jpg">
       <div class="p-3 text-center">
         <p class="text-base font-semibold text-gray-800 truncate">ASV 과학축제 부스 출범</p>
       </div>
     </div>
-    <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='detail?id=313&amp;city='">
+    <div class="bg-white rounded-xl shadow hover:shadow-md transition duration-300 overflow-hidden" onclick="location.href='/cora_study_group'">
       <img alt="" class="w-full h-48 object-cover" src="http://tong.visitkorea.or.kr/cms/resource/21/2654721_image2_1.jpg">
       <div class="p-3 text-center">
         <p class="text-base font-semibold text-gray-800 truncate">코라코라 열공단</p>
@@ -320,10 +299,10 @@
     </div>
     <div style="margin: 10px 0;">
         <a href="/">홈</a>
-        <a href="/todo">about us</a>
-        <a href="/lego">community</a>
-        <a href="/listView">announcement</a>
-        <a href="/ask">가입문의</a>
+        <a href="/abous_us">about us</a>
+        <a href="/community">community</a>
+        <a href="/announcement">announcement</a>
+        <a href="/join">가입문의</a>
     </div>
     <div>
         Developed by 2025 representatives
@@ -412,119 +391,5 @@ document.querySelector(".next").addEventListener("click", () => {
      const next = (currentIndex + 1) % sliderCount;
      gotoSlider(next);
 }, 5000);
-</script>
-<!--날씨조회 스크립트-->
-<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fca66437ffd757b4f7019de36217ec4b&amp;libraries=services"></script><script charset="UTF-8" src="https://t1.daumcdn.net/mapjsapi/js/main/4.4.19/kakao.js"></script><script charset="UTF-8" src="https://t1.daumcdn.net/mapjsapi/js/libs/services/1.0.2/services.js"></script>
-<script>
-  const SERVICE_KEY = "HI4uJdHAz5JRb2JVDzardd1U0%2FYqhiVizmMqkHND%2FsE19hTvA3QhWCCbHs0FbiMc%2Bscyz1zQxWkuoreAo6ywRQ%3D%3D"; // 중기예보용 서비스 키로 교체
-const geocoder = new kakao.maps.services.Geocoder();
-const weatherBox = document.querySelector('.ct_weather');
-
-document.querySelector('.btnSearch').addEventListener('click', () => {
-  const query = document.querySelector('.searchText').value.trim();
-  if (!query) return;
-  geocoder.addressSearch(query, (result, status) => {
-    if (status === kakao.maps.services.Status.OK) {
-      const lat = parseFloat(result[0].y);
-      const lon = parseFloat(result[0].x);
-      const { x, y } = dfs_xy_conv("toXY", lat, lon);
-      getForecast(x, y);
-    } else {
-      weatherBox.innerHTML = "주소를 찾을 수 없습니다.";
-    }
-  });
-});
-
-function dfs_xy_conv(code, v1, v2) {
-  const RE = 6371.00877, GRID = 5.0, SLAT1 = 30.0, SLAT2 = 60.0, OLON = 126.0, OLAT = 38.0, XO = 43, YO = 136;
-  const DEGRAD = Math.PI / 180.0;
-  const re = RE / GRID;
-  const slat1 = SLAT1 * DEGRAD;
-  const slat2 = SLAT2 * DEGRAD;
-  const olon = OLON * DEGRAD;
-  const olat = OLAT * DEGRAD;
-  let sn = Math.tan(Math.PI * 0.25 + slat2 * 0.5) / Math.tan(Math.PI * 0.25 + slat1 * 0.5);
-  sn = Math.log(Math.cos(slat1) / Math.cos(slat2)) / Math.log(sn);
-  let sf = Math.tan(Math.PI * 0.25 + slat1 * 0.5);
-  sf = Math.pow(sf, sn) * Math.cos(slat1) / sn;
-  let ro = Math.tan(Math.PI * 0.25 + olat * 0.5);
-  ro = re * sf / Math.pow(ro, sn);
-  if (code === "toXY") {
-    let ra = Math.tan(Math.PI * 0.25 + (v1) * DEGRAD * 0.5);
-    ra = re * sf / Math.pow(ra, sn);
-    let theta = v2 * DEGRAD - olon;
-    if (theta > Math.PI) theta -= 2.0 * Math.PI;
-    if (theta < -Math.PI) theta += 2.0 * Math.PI;
-    theta *= sn;
-    return {
-      x: Math.floor(ra * Math.sin(theta) + XO + 0.5),
-      y: Math.floor(ro - ra * Math.cos(theta) + YO + 0.5)
-    };
-  }
-}
-
-function interpret(cat, val) {
-  if (cat === "SKY") return {"1":"맑음","3":"구름많음","4":"흐림"}[val] || "-";
-  if (cat === "PTY") return {"0":"없음","1":"비","2":"비/눈","3":"눈","4":"소나기"}[val] || "-";
-  return val;
-}
-
-function getForecast(x, y) {
-  const now = new Date();
-  const baseDate = now.getFullYear() + String(now.getMonth()+1).padStart(2, '0') + String(now.getDate()).padStart(2, '0');
-  const baseTime = "0200"; // 단기예보 기준 시간
-
-  const api = `https://apis.data.go.kr/1360000/VilageFcstInfoService_2.0/getVilageFcst?serviceKey=${SERVICE_KEY}&pageNo=1&numOfRows=1000&dataType=JSON&base_date=${baseDate}&base_time=${baseTime}&nx=${x}&ny=${y}`;
-
-  fetch(api)
-    .then(res => res.json())
-    .then(data => {
-      const items = data.response.body.items.item;
-      const result = [];
-
-      for (let i = 0; i < 3; i++) {
-        const date = new Date();
-        date.setDate(date.getDate() + i);
-        const label = (i === 0 ? "오늘" : i === 1 ? "내일" : "모레") + ` (${date.getMonth()+1}/${date.getDate()})`;
-        const ymd = date.getFullYear() + String(date.getMonth()+1).padStart(2,'0') + String(date.getDate()).padStart(2,'0');
-
-        const amSky = items.find(it => it.fcstDate === ymd && it.fcstTime === '0900' && it.category === 'SKY');
-        const amPty = items.find(it => it.fcstDate === ymd && it.fcstTime === '0900' && it.category === 'PTY');
-
-        const pmSky = items.find(it => it.fcstDate === ymd && it.fcstTime === '1500' && it.category === 'SKY');
-        const pmPty = items.find(it => it.fcstDate === ymd && it.fcstTime === '1500' && it.category === 'PTY');
-
-        const tmn = items.find(it => it.fcstDate === ymd && it.category === 'TMN');
-        const tmx = items.find(it => it.fcstDate === ymd && it.category === 'TMX');
-
-        const textAm = interpret("PTY", amPty?.fcstValue) !== "없음" ? interpret("PTY", amPty?.fcstValue) : interpret("SKY", amSky?.fcstValue);
-        const textPm = interpret("PTY", pmPty?.fcstValue) !== "없음" ? interpret("PTY", pmPty?.fcstValue) : interpret("SKY", pmSky?.fcstValue);
-
-        result.push(`
-          <div style="width: 100px;"><strong>${label}</strong></div>
-          <div style="width: 100px;">오전 <img src="/weatherimg/${textAm}.png" alt="${textAm}" style="height:20px; vertical-align:middle;"> </div>
-          <div style="width: 100px;">오후 <img src="/weatherimg/${textPm}.png" alt="${textPm}" style="height:20px; vertical-align:middle;"> </div>
-          <div style="width: 100px;">${tmn?.fcstValue || '-'}℃ / ${tmx?.fcstValue || '-'}℃</div>
-        `);
-      }
-
-      weatherBox.innerHTML = result.map(line => `
-        <div style="display: flex; align-items: center;  margin-bottom: 4px; font-size: 13px;">
-          ${line}
-        </div>
-      `).join('');
-    })
-    .catch(err => {
-      console.error(err);
-      weatherBox.innerHTML = "날씨 정보를 불러오지 못했습니다.";
-    });
-}
-</script>
-
-
-
-
-
-
-
-</body></html>
+</body>
+  </html>
