--- a/announcement.html
+++ b/announcement.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <div class="container header-container">
-            <h1 class="logo">Hy-CoRA</h1>
+            <h1 class="logo"><a href="index.html">Hy-CoRA</a></h1>
             <nav class="nav">
                 <ul>
                     <li><a href="about.html">소개</a></li>
