이슈에 작성

--- a/about.html
+++ b/about.html
@@ -24,11 +24,21 @@
     </header>
 
     <main>
+
+        <div class="about-header">
+            <h2 class="about-title">Hy-CoRA</h2>
+            <p class="about-subtitle">
+                Hy-CoRA는 컴퓨터 기술을 공부하고 협업 프로젝트를 통해 함께 성장하는 
+                한양대학교 ERICA의 학술 동아리입니다.
+            </p>
+        </div>
+
+
         <section class="about-section">
             <div class="container about-content">
-                <h2 class="section-title">Hy-CoRA</h2>
-                <p class="section-description">Hy-CoRA는 컴퓨터 기술을 공부하고 협업 프로젝트를 통해 함께 성장하는 한양대학교 ERICA의 학술 동아리입니다.</p>
 
+                
+                
                 <div class="about-nav">
                     <button class="nav-button active">동아리 소개</button>
                     <button class="nav-button">활동 보기</button>
