--- a/activities.html
+++ b/activities.html
@@ -24,10 +24,17 @@
     </header>
 
     <main>
+
+        <div class="about-header">
+            <h2 class="about-title">활동 내용</h2>
+            <p class="about-subtitle">
+                다양한 스터디, 프로젝트, 봉사활동, 친목활동을 통해 함께 성장하고 있습니다.
+            </p>
+        </div>
+
+
         <section class="activities-section">
             <div class="container">
-                <h2 class="section-title">활동 내용</h2>
-                <p class="section-description">다양한 스터디, 프로젝트, 봉사활동, 친목활동을 통해 함께 성장하고 있습니다.</p>
                 <div class="activities-nav">
                     <button class="nav-button active">전체 활동</button>
                     <button class="nav-button">스터디</button>
