--- a/announcement.html
+++ b/announcement.html
@@ -24,10 +24,17 @@
     </header>
 
     <main>
+
+        <div class="about-header">
+            <h2 class="about-title">공지사항</h2>
+            <p class="about-subtitle">
+                동아리의 최신 소식과 중요한 공지사항을 확인하세요.
+            </p>
+        </div>
+
+
         <section class="notices-section">
             <div class="container">
-                <h2 class="section-title">공지사항</h2>
-                <p class="section-description">동아리의 최신 소식과 중요한 공지사항을 확인하세요.</p>
                 <div class="notices-nav">
                     <button class="nav-button active">전체</button>
                     <button class="nav-button">공지사항</button>
