--- a/apply.html
+++ b/apply.html
@@ -24,10 +24,17 @@
     </header>
 
     <main>
+
+        <div class="about-header">
+            <h2 class="about-title">모집 안내</h2>
+            <p class="about-subtitle">
+                Hy-CoRA 동아리에서 함께 성장할 새로운 멤버를 모집합니다.
+            </p>
+        </div>
+
+
         <section class="recruitment-section">
             <div class="container">
-                <h2 class="section-title">모집 안내</h2>
-                <p class="section-description">Hy-CoRA 동아리에서 함께 성장할 새로운 멤버를 모집합니다.</p>
                 <div class="recruitment-nav">
                     <button class="nav-button active">지원 자격</button>
                     <button class="nav-button">활동 내용</button>
