Fix: change lowercase to uppercase

--- a/apply.html
+++ b/apply.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hy-CoRA - 모집/가입 안내</title>
+    <title>HY-CoRA - 모집/가입 안내</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
 
     <header class="header">
         <div class="container header-container">
-            <h1 class="logo"><a href="index.html">Hy-CoRA</a></h1>
+            <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
             <nav class="nav">
                 <ul>
                     <li><a href="about.html">소개</a></li>
@@ -27,7 +27,7 @@
         <section class="recruitment-section">
             <div class="container">
                 <h2 class="section-title">모집 안내</h2>
-                <p class="section-description">Hy-CoRA 동아리에서 함께 성장할 새로운 멤버를 모집합니다.</p>
+                <p class="section-description">HY-CoRA 동아리에서 함께 성장할 새로운 멤버를 모집합니다.</p>
                 <div class="recruitment-nav">
                     <button class="nav-button active">지원 자격</button>
                     <button class="nav-button">활동 내용</button>
