--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hy-CoRA - 동아리 소개</title>
+    <title>HY-CoRA - 동아리 소개</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
 
     <header class="header">
         <div class="container header-container">
-            <h1 class="logo"><a href="index.html">Hy-CoRA</a></h1>
+            <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
             <nav class="nav">
                 <ul>
                     <li><a href="about.html">소개</a></li>
@@ -26,8 +26,8 @@
     <main>
         <section class="about-section">
             <div class="container about-content">
-                <h2 class="section-title">Hy-CoRA</h2>
-                <p class="section-description">Hy-CoRA는 컴퓨터 기술을 공부하고 협업 프로젝트를 통해 함께 성장하는 한양대학교 ERICA의 학술 동아리입니다.</p>
+                <h2 class="section-title">HY-CoRA</h2>
+                <p class="section-description">HY-CoRA는 컴퓨터 기술을 공부하고 협업 프로젝트를 통해 함께 성장하는 한양대학교 ERICA의 학술 동아리입니다.</p>
 
                 <div class="about-nav">
                     <button class="nav-button active">동아리 소개</button>
@@ -36,7 +36,7 @@
 
                 <div class="club-intro">
                     <h3>동아리 소개</h3>
-                    <p>Hy-CoRA는 한양대학교 ERICA 캠퍼스를 기반으로 활동하는 컴퓨터 연구 동아리입니다. 다양한 배경을 가진 학생들이 함께 모여, 개발 스터디부터 실제 프로젝트까지 함께하며 성장하고 있습니다. 실전 중심의 학습과 협업을 통해, 기술을 넘어 문제 해결 능력과 팀워크를 키우는 것을 목표로 합니다.</p>
+                    <p>HY-CoRA는 한양대학교 ERICA 캠퍼스를 기반으로 활동하는 컴퓨터 연구 동아리입니다. 다양한 배경을 가진 학생들이 함께 모여, 개발 스터디부터 실제 프로젝트까지 함께하며 성장하고 있습니다. 실전 중심의 학습과 협업을 통해, 기술을 넘어 문제 해결 능력과 팀워크를 키우는 것을 목표로 합니다.</p>
                     <div class="intro-cards">
                         <div class="card">
                             <div class="icon-container green">
