--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hy-CoRA - 홈</title>
+    <title>HY-CoRA - 홈</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
 
     <header class="header">
         <div class="container header-container">
-            <h1 class="logo"><a href="index.html">Hy-CoRA</a></h1>
+            <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
             <nav class="nav">
                 <ul>
                     <li><a href="about.html">소개</a></li>
