Fix: change lowercase to uppercase

--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
 
     <header class="header">
         <div class="container header-container">
-            <h1 class="logo">Hy-CoRA</h1>
+            <h1 class="logo">HY-CoRA</h1>
             <nav class="nav">
                 <ul>
                     <li><a href="about.html">소개</a></li>
