--- a/activities.html
+++ b/activities.html
@@ -36,9 +36,8 @@
         <section class="activities-section">
             <div class="container">
                 <div class="activities-nav">
-                    <button class="nav-button active">전체 활동</button>
+                    <button class="nav-button">전체 활동</button>
                     <button class="nav-button">스터디</button>
-                    <button class="nav-button">프로젝트</button>
                     <button class="nav-button">친목 활동</button>
                 </div>
                 <div class="activities-grid">
