--- a/index.html
+++ b/index.html
@@ -1,78 +1,71 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Hy-CoRA - 홈</title>
-        <link rel="stylesheet" href="style.css" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
-            rel="stylesheet"
-        />
-    </head>
-    <body>
-        <header class="header">
-            <div class="container header-container">
-                <h1 class="logo"><a href="index.html">Hy-CoRA</a></h1>
-                <nav class="nav">
-                    <ul>
-                        <li><a href="about.html">소개</a></li>
-                        <li><a href="activities.html">활동 내용</a></li>
-                        <li><a href="apply.html">모집 안내/가입</a></li>
-                        <li><a href="announcement.html">공지사항</a></li>
-                    </ul>
-                </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HY-CoRA - 홈</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+    <header class="header">
+        <div class="container header-container">
+            <h1 class="logo"><a href="index.html">HY-CoRA</a></h1>
+            <nav class="nav">
+                <ul>
+                    <li><a href="about.html">소개</a></li>
+                    <li><a href="activities.html">활동 내용</a></li>
+                    <li><a href="apply.html">모집 안내/가입</a></li>
+                    <li><a href="announcement.html">공지사항</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section class="intro-section">
+            <div class="intro-container">
+                <div class="intro-text">
+                    <h2>한양대학교 ERICA의 컴퓨터 연구 동아리 HY-CoRA</h2>
+                    <p>실력과 열정을 함께 키우는 하이코라에서,<br>당신의 가능성을 펼쳐보세요.</p>
+                </div>
+                <div class="intro-image-placeholder">
+                    <!-- <span>사진 1</span> -->
+                </div>
             </div>
-        </header>
-
-        <main>
-            <section class="intro-section">
-                <div class="intro-container">
-                    <div class="intro-text">
-                        <h2>
-                            한양대학교 ERICA의 컴퓨터 연구 동아리 <br />HY-CoRA
-                        </h2>
-
-                        <p>
-                            실력과 열정을 함께 키우는 하이코라에서,<br />당신의
-                            가능성을 펼쳐보세요.
-                        </p>
+        </section>
+        
+        <section class="past-events-section">
+            <div class="container">
+                <h2 class="section-title">Past Events</h2>
+                <div class="past-events-grid">
+                    <div class="event-card">
+                        <div class="event-image-placeholder"></div>
+                        <h4>Event 1</h4>
+                        <p>Event 1 설명</p>
                     </div>
-                    <div class="intro-image-placeholder">
-                        <!-- <span>사진 1</span> -->
+                    <div class="event-card">
+                        <div class="event-image-placeholder"></div>
+                        <h4>Event 1</h4>
+                        <p>Event 1 설명</p>
+                    </div>
+                    <div class="event-card">
+                        <div class="event-image-placeholder"></div>
+                        <h4>Event 1</h4>
+                        <p>Event 1 설명</p>
                     </div>
                 </div>
-            </section>
-
-            <section class="past-events-section">
-                <div class="container">
-                    <h2 class="section-title">Past Events</h2>
-                    <div class="past-events-grid">
-                        <div class="event-card">
-                            <div class="event-image-placeholder"></div>
-                            <h4>Event 1</h4>
-                            <p>Event 1 설명</p>
-                        </div>
-                        <div class="event-card">
-                            <div class="event-image-placeholder"></div>
-                            <h4>Event 1</h4>
-                            <p>Event 1 설명</p>
-                        </div>
-                        <div class="event-card">
-                            <div class="event-image-placeholder"></div>
-                            <h4>Event 1</h4>
-                            <p>Event 1 설명</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
-
-        <footer class="footer">
-            <div class="container footer-content">
-                <span>경기도 안산시 상록구 한양대학로 55, (동방 주소)</span>
-                <span>hycora369@gmail.com</span>
             </div>
-        </footer>
-    </body>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="container footer-content">
+            <span>경기도 안산시 상록구 한양대학로 55, (동방 주소)</span>
+            <span>hycora369@gmail.com</span>
+        </div>
+    </footer>
+
+</body>
 </html>
