--- a/announcement.html
+++ b/announcement.html
@@ -37,10 +37,9 @@
             <div class="container">
                 <div class="notices-nav">
                     <button class="nav-button active">전체</button>
-                    <button class="nav-button">공지사항</button>
                     <button class="nav-button">행사</button>
                     <button class="nav-button">모집</button>
-                    <button class="nav-button">성과</button>
+                    <button class="nav-button">기타</button>
                 </div>
                 <div class="notices-list">
                     <div class="notice-item">
@@ -84,5 +83,19 @@
         </div>
     </footer>
 
+    <script>
+        const navButtons = document.querySelectorAll('.notices-nav .nav-button');
+
+        navButtons.forEach(clickedButton => {
+            clickedButton.addEventListener('click', () => {
+                // 먼저 모든 버튼에서 'active' 클래스를 제거합니다.
+                navButtons.forEach(button => {
+                    button.classList.remove('active');
+                });
+                // 그 다음 클릭된 버튼에만 'active' 클래스를 추가합니다.
+                clickedButton.classList.add('active');
+            });
+        });
+    </script>
 </body>
 </html>
