--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <p>실력과 열정을 함께 키우는 하이코라에서,<br>당신의 가능성을 펼쳐보세요.</p>
                 </div>
                 <div class="intro-image-placeholder">
-                    <!-- <span>사진 1</span> -->
+                    <span>사진 1</span>
                 </div>
             </div>
         </section>
@@ -62,8 +62,8 @@
 
     <footer class="footer">
         <div class="container footer-content">
-            <span>경기도 안산시 상록구 한양대학로 55, (동방 주소)</span>
-            <span>hycora369@gmail.com</span>
+            <p>경기도 안산시 상록구 한양대학로 55 복지관 425호 (동방 주소)<br>hycora369@gmail.com</p>
+            <p>&nbsp;&nbsp;&nbsp;회장: 010-3552-2044<br>부회장: 010-3410-4697</p>
         </div>
     </footer>
 
