--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <div class="about-header">
             <h2 class="about-title">HY-CoRA</h2>
             <p class="about-subtitle">
-                HY-CoRA는 컴퓨터 기술을 공부하고 협업 프로젝트를 통해 함께 성장하는 
+                HY-CoRA는 컴퓨터 기술을 공부하고 협업 프로젝트를 통해 함께 성장하는 <br>
                 한양대학교 ERICA의 학술 동아리입니다.
             </p>
         </div>
@@ -40,13 +40,16 @@
                 
                 
                 <div class="about-nav">
-                    <button class="nav-button active">동아리 소개</button>
-                    <button class="nav-button">활동 보기</button>
+                    <button class="nav-button active">인사말</button>
+                    <button class="nav-button">소개</button>
+                    <button class="nav-button">학습</button>
+                    <button class="nav-button">성과</button>
                 </div>
 
                 <div class="club-intro">
-                    <h3>동아리 소개</h3>
-                    <p>HY-CoRA는 한양대학교 ERICA 캠퍼스를 기반으로 활동하는 컴퓨터 연구 동아리입니다. 다양한 배경을 가진 학생들이 함께 모여, 개발 스터디부터 실제 프로젝트까지 함께하며 성장하고 있습니다. 실전 중심의 학습과 협업을 통해, 기술을 넘어 문제 해결 능력과 팀워크를 키우는 것을 목표로 합니다.</p>
+                    <h3>인사말</h3>
+                    <div class="highlight-title">학문적 성장의 장</div>
+                    <p>HY-CoRA는 한양대학교 ERICA를 기반으로, 학문적 탐구와 지식 교류를 중심으로 하는 컴퓨터 연구 동아리입니다. 다양한 관점과 경험을 지닌 구성원들이 모여, 깊이 있는 토론과 연구를 통해 사고의 폭을 넓히고 전문성을 심화시킵니다.</p>
                     <div class="intro-cards">
                         <div class="card">
                             <div class="icon-container green">
