--- a/announcement.html
+++ b/announcement.html
@@ -41,32 +41,40 @@
                     <button class="nav-button">모집</button>
                     <button class="nav-button">기타</button>
                 </div>
+                
                 <div class="notices-list">
-                    <div class="notice-item">
-                        <p>2025 하반기 정기 총회 안내</p>
-                        <p>2025 상반기 정기 총회가 ....</p>
-                        <p>2025.xx</p>
-                        <div class="notice-tag notice">공지사항</div>
-                    </div>
-                    <div class="notice-item">
+                    <div class="notice-item event">
                         <p>2025 하반기 정기 총회 안내</p>
                         <p>2025 상반기 정기 총회가 ....</p>
                         <p>2025.xx</p>
                         <div class="notice-tag event">행사</div>
                     </div>
-                    <div class="notice-item">
-                        <p>2025 하반기 정기 총회 안내</p>
-                        <p>2025 상반기 정기 총회가 ....</p>
+                    <div class="notice-item event">
+                        <p>신입생 OT 및 동아리 설명회 개최</p>
+                        <p>OT 및 설명회 일정이 확정되었습니다...</p>
+                        <p>2025.xx</p>
+                        <div class="notice-tag event">행사</div>
+                    </div>
+                    <div class="notice-item recruitment">
+                        <p>2025년 2학기 신규 동아리원 모집</p>
+                        <p>Hy-CoRA에서 열정적인 동아리원을 모집합니다.</p>
                         <p>2025.xx</p>
                         <div class="notice-tag recruitment">모집</div>
                     </div>
-                    <div class="notice-item">
-                        <p>2025 하반기 정기 총회 안내</p>
-                        <p>2025 상반기 정기 총회가 ....</p>
+                    <div class="notice-item etc">
+                        <p>교내 해커톤 우승!</p>
+                        <p>Hy-CoRA 1팀이 교내 해커톤에서 우승했습니다.</p>
                         <p>2025.xx</p>
-                        <div class="notice-tag achievement">성과</div>
+                        <div class="notice-tag etc">기타</div>
+                    </div>
+                    <div class="notice-item etc">
+                        <p>동아리 방 정리 및 청소 안내</p>
+                        <p>쾌적한 동아리 활동을 위해...</p>
+                        <p>2025.xx</p>
+                        <div class="notice-tag etc">기타</div>
                     </div>
                 </div>
+
                 <div class="pagination">
                     <a href="#" class="active">1</a>
                     <a href="#">2</a>
@@ -78,24 +86,57 @@
 
     <footer class="footer">
         <div class="container footer-content">
-            <p>경기도 안산시 상록구 한양대학로 55 복지관 425호 (동방 주소)<br>hycora369@gmail.com</p>
-            <p>&nbsp;&nbsp;&nbsp;회장: 010-3552-2044<br>부회장: 010-3410-4697</p>
+            <p>경기도 안산시 상록구 한양대학로 55, (동방 주소)</p>
+            <p>hycora369@gmail.com</p>
         </div>
     </footer>
 
     <script>
+    document.addEventListener('DOMContentLoaded', () => {
         const navButtons = document.querySelectorAll('.notices-nav .nav-button');
+        const noticeItems = document.querySelectorAll('.notices-list .notice-item');
 
-        navButtons.forEach(clickedButton => {
-            clickedButton.addEventListener('click', () => {
-                // 먼저 모든 버튼에서 'active' 클래스를 제거합니다.
-                navButtons.forEach(button => {
-                    button.classList.remove('active');
+        navButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                // 1. 모든 버튼에서 'active' 클래스 제거
+                navButtons.forEach(btn => btn.classList.remove('active'));
+                
+                // 2. 클릭된 버튼에 'active' 클래스 추가
+                button.classList.add('active');
+
+                // 3. 버튼의 텍스트에 따라 필터링
+                const filter = button.textContent.trim();
+
+                // 모든 공지사항 항목 숨기기
+                noticeItems.forEach(item => {
+                    item.style.display = 'none';
                 });
-                // 그 다음 클릭된 버튼에만 'active' 클래스를 추가합니다.
-                clickedButton.classList.add('active');
+
+                // 필터에 맞는 공지사항 항목만 보이게 하기
+                if (filter === '전체') {
+                    noticeItems.forEach(item => {
+                        item.style.display = 'flex'; // 전체는 모두 보여줌
+                    });
+                } else {
+                    const filterClass = getFilterClass(filter);
+                    const filteredItems = document.querySelectorAll(`.notices-list .${filterClass}`);
+                    filteredItems.forEach(item => {
+                        item.style.display = 'flex'; // 필터에 맞는 항목만 보여줌
+                    });
+                }
             });
         });
-    </script>
+
+        // 텍스트에 해당하는 클래스명을 반환하는 헬퍼 함수
+        function getFilterClass(text) {
+            switch (text) {
+                case '행사': return 'event';
+                case '모집': return 'recruitment';
+                case '기타': return 'etc';
+                default: return '';
+            }
+        }
+    });
+</script>
 </body>
 </html>
