--- a/apply.html
+++ b/apply.html
@@ -36,24 +36,39 @@
         <section class="recruitment-section">
             <div class="container">
                 <div class="recruitment-nav">
-                    <button class="nav-button active">지원 자격</button>
-                    <button class="nav-button">활동 내용</button>
+                    <button class="nav-button active">모집일정</button>
+                    <button class="nav-button">지원자격</button>
+                    <button class="nav-button">FAQ</button>
                     <button class="nav-button">문의</button>
                 </div>
+                <h1>모집 일정</h1>
                 <div class="recruitment-content">
                     <div class="recruitment-card">
-                        <h3>지원 자격</h3>
-                        <p>한양대학교 ERICA 학부생 누구나</p>
-                        <p>컴퓨터에 대한 경험과 전공 무관</p>
-                    </div>
-                    <div class="recruitment-card">
-                        <h3>모집 일정</h3>
-                        <p>2025.xx -</p>
+                        <div class="recruitment-line"></div>
+                        <div class="recruitment-box">2000.00.00 ~ 2000.00.00: 사전 안내 공개</div>
+                        <div class="recruitment-box">2000.00.00 ~ 2000.00.00: 사전 안내 공개</div>
+                        <div class="recruitment-box">2000.00.00 ~ 2000.00.00: 사전 안내 공개</div>
+                        <div class="recruitment-box">2000.00.00 ~ 2000.00.00: 사전 안내 공개</div>
                     </div>
                 </div>
-                <button class="apply-button">지원하기</button>
             </div>
         </section>
+        <div class="two-cards">
+            <div class="outer-card">
+                <div class="card-label">지원 방법</div>
+                <div class="inner-card">
+                    <h2>제출 & 확인</h2>
+                    <p>지원 기간에 꼭 제출 · 안내 메일/문자 확인</p>
+                </div>
+            </div>
+                <div class="outer-card">
+                <div class="card-label">바로 가기</div>
+                    <div class="inner-card">
+                    <h2>지원 자격 / FAQ / 문의</h2>
+                    <p><b>지원자격</b> · FAQ · 문의 페이지에서 자세히 확인하세요.</p>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
@@ -62,7 +77,6 @@
             <p>&nbsp;&nbsp;&nbsp;회장: 010-3552-2044<br>부회장: 010-3410-4697</p>
         </div>
     </footer>
-
     <script src="js/apply.js"></script>
 </body>
 </html>
