--- a/announcement.html
+++ b/announcement.html
@@ -42,37 +42,18 @@
                     <button class="nav-button">기타</button>
                 </div>
                 
-                <div class="notices-list">
-                    <div class="notice-item event">
-                        <p>2025 하반기 정기 총회 안내</p>
-                        <p>2025 상반기 정기 총회가 ....</p>
-                        <p>2025.xx</p>
-                        <div class="notice-tag event">행사</div>
-                    </div>
-                    <div class="notice-item event">
-                        <p>신입생 OT 및 동아리 설명회 개최</p>
-                        <p>OT 및 설명회 일정이 확정되었습니다...</p>
-                        <p>2025.xx</p>
-                        <div class="notice-tag event">행사</div>
-                    </div>
-                    <div class="notice-item recruitment">
-                        <p>2025년 2학기 신규 동아리원 모집</p>
-                        <p>Hy-CoRA에서 열정적인 동아리원을 모집합니다.</p>
-                        <p>2025.xx</p>
-                        <div class="notice-tag recruitment">모집</div>
-                    </div>
-                    <div class="notice-item etc">
-                        <p>교내 해커톤 우승!</p>
-                        <p>Hy-CoRA 1팀이 교내 해커톤에서 우승했습니다.</p>
-                        <p>2025.xx</p>
-                        <div class="notice-tag etc">기타</div>
-                    </div>
-                    <div class="notice-item etc">
-                        <p>동아리 방 정리 및 청소 안내</p>
-                        <p>쾌적한 동아리 활동을 위해...</p>
-                        <p>2025.xx</p>
-                        <div class="notice-tag etc">기타</div>
-                    </div>
+                <table class="notices-table">
+                    <thead>
+                        <tr>
+                            <th>제목</th>
+                            <th>내용</th>
+                            <th>일자</th>
+                            <th>분류</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        </tbody>
+                </table>
                 </div>
 
                 <div class="pagination">
