--- a/apply.html
+++ b/apply.html
@@ -52,23 +52,84 @@
                     </div>
                 </div>
             </div>
-        </section>
         <div class="two-cards">
             <div class="outer-card">
                 <div class="card-label">지원 방법</div>
                 <div class="inner-card">
                     <h2>제출 & 확인</h2>
-                    <p>지원 기간에 꼭 제출 · 안내 메일/문자 확인</p>
+                    <p>지원 기간에 꼭 제출 -> 안내 메일/문자 확인</p>
                 </div>
             </div>
                 <div class="outer-card">
                 <div class="card-label">바로 가기</div>
                     <div class="inner-card">
                     <h2>지원 자격 / FAQ / 문의</h2>
-                    <p><b>지원자격</b> · FAQ · 문의 페이지에서 자세히 확인하세요.</p>
+                    <p><b>지원자격</b> · <b>FAQ</b> · <b>문의</b> 페이지에서 자세히 확인하세요.</p>
                 </div>
             </div>
         </div>
+            <div><h2> 지원자격</h2></div>
+                <div class="apply-card">
+                    <p>학년·전공 무관. 배우고 협업할 의지가 있다면 누구나 지원할 수 있습니다.</p>
+                </div>
+            <div><h2>기본 요건</h2></div>
+                <div class="two-cards">
+            <div class="outer-card">
+                <div class="card-label card-label-1">의지</div>
+                <div class="inner-card">
+                    <h2>학습 의지</h2>
+                    <p>기초부터 차근히 배우고 팀으로 협업할 마음</p>
+                </div>
+            </div>
+                <div class="outer-card">
+                <div class="card-label card-label-2">참여</div>
+                    <div class="inner-card">
+                    <h2>스터디 참여</h2>
+                    <p>개인 일정에 맞춰 참여 가능한 트랙을 자유롭게 선택 신청하세요.</p>
+                </div>
+            </div>
+        </div>
+            <div><h2>지원 절차</h2></div>
+                <div class="container">
+                    <div class="apply-box">
+                        <div class="apply-row">
+                            <div class="apply-circle"><h2>1</h2></div>
+                                <div class="apply-order">
+                                <div class="apply-text">
+                                    <h2>지원서 제출</h2>
+                                    <p>모집 기간에 폼 제출</p>
+                                </div>
+                                <button class="apply-button">지원 폼 열기</button>
+                                </div>
+                                </div>
+                        <div class="apply-row">
+                            <div class="apply-circle"><h2>2</h2></div>
+                            <div class="apply-order">
+                                <div class="apply-text">
+                                    <h2>지원서 제출</h2>
+                                    <p>모집 기간에 폼 제출</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                    <div class="two-cards">
+                        <div class="outer-card">
+                            <div class="card-label">바로가기</div>
+                            <div class="inner-card">
+                            <h2>모집 일정 확인</h2>
+                            <p><b>모집 일정</b>에서 학기별 타임라인을 확인하세요.</p>
+                            </div>
+                        </div>
+                    <div class="outer-card">
+                        <div class="card-label">문의</div>
+                            <div class="inner-card">
+                            <h2>질문이 있다면</h2>
+                            <p><b>문의</b>로 연락주세요.</p>
+                        </div>
+                    </div>
+                </div>
+        </section>
     </main>
 
     <footer class="footer">
