WIP: local edits before pulling

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                     <button class="nav-button active"  data-target="greeting">인사말</button>
                     <button class="nav-button"  data-target="introduction">소개</button>
                     <button class="nav-button"  data-target="administrators">임원진</button>
-                    <button class="nav-button"  data-target="greeting">학습</button>
+                    <button class="nav-button"  data-target="learning">학습</button>
                     <button class="nav-button"  data-target="greeting">성과</button>
                 </div>
 
@@ -199,6 +199,48 @@
     
   </section>
 </div>
+
+
+
+
+
+
+<h3 id="learning">학습</h3>
+
+<section class="learning-wrap">
+  <div class="learning-inner">
+    <article class="learning-card">
+      <div class="learning-card-inner">
+        <h4 class="learning-title">정기 스터디</h4>
+        <p class="learning-desc">
+          파이썬, C언어, 웹 등 다양한 주제로 주 1회 세션을 진행합니다.<br>
+          실습과 코드리뷰를 통해 기초부터 심화까지 함께 성장합니다.
+        </p>
+      </div>
+    </article>
+
+    <article class="learning-card">
+      <div class="learning-card-inner">
+        <h4 class="learning-title">정기 스터디</h4>
+        <p class="learning-desc">
+          파이썬, C언어, 웹 등 다양한 주제로 주 1회 세션을 진행합니다.<br>
+          실습과 코드리뷰를 통해 기초부터 심화까지 함께 성장합니다.
+        </p>
+      </div>
+    </article>
+
+    <article class="learning-card">
+      <div class="learning-card-inner">
+        <h4 class="learning-title">정기 스터디</h4>
+        <p class="learning-desc">
+          파이썬, C언어, 웹 등 다양한 주제로 주 1회 세션을 진행합니다.<br>
+          실습과 코드리뷰를 통해 기초부터 심화까지 함께 성장합니다.
+        </p>
+      </div>
+    </article>
+  </div>
+</section>
+
 
 
 
